# torchcomms

./: .gitignore  .lintrunner.toml  CLAUDE.md  CMakeLists.txt  README.md  a.sh  build_ncclx.sh  build_ncclx.sh.orig  build_rccl.sh  build_rcclx.sh  pyproject.toml  requirements.txt  setup.py  setup_rcclx.sh
comms/common/: AtomicUtils.cuh  BitOps.cuh  CMakeLists.txt  CudaWrap.h  DeviceConstants.cuh  IpcGpuBarrier.cu  IpcGpuBarrier.cuh  IpcMemHandler.cc  IpcMemHandler.h
comms/common/algorithms/: AlgoFactory.cu  AlgoFactory.cuh  AlgoUtils.h  CollCommon.cuh
comms/common/algorithms/all_gather/: AllGatherAlgoManager.h  all_gather_dda.cuh
comms/common/algorithms/all_reduce/: AllReduceAlgoManager.cu  AllReduceAlgoManager.h  all_reduce_dda.cuh
comms/common/algorithms/all_to_all/: AllToAllAlgoManager.h  all_to_all_dda.cuh
comms/common/algorithms/reduce_scatter/: ReduceScatterAlgoManager.h  reduce_scatter_dda.cuh
comms/common/bootstrap/: IBootstrap.h
comms/common/bootstrap/tests/: MockBootstrap.h
comms/common/tests/: TestBaselineBootstrap.h
comms/torchcomms/gloo/: CMakeLists.txt  TorchCommGloo.cpp  TorchCommGloo.hpp  TorchCommGlooPy.cpp  TorchWorkGloo.cpp  TorchWorkGloo.hpp
comms/torchcomms/nccl/: CMakeLists.txt  NcclApi.cpp  NcclApi.hpp  TorchCommNCCL.cpp  TorchCommNCCL.hpp  TorchCommNCCLBootstrap.cpp  TorchCommNCCLBootstrap.hpp  TorchCommNCCLCCA.cpp  TorchCommNCCLCCA.hpp  TorchCommNCCLPy.cpp  TorchCommNCCLUtils.cpp  TorchWorkNCCL.cpp  TorchWorkNCCL.hpp  TorchWorkNCCLQueue.cpp
comms/torchcomms/ncclx/: CMakeLists.txt  GraphEventTracker.cpp  GraphEventTracker.hpp  NcclxApi.cpp  NcclxApi.hpp  NcclxGlobalApi.cpp  NcclxGlobalApi.hpp  TorchCommNCCLX.cpp  TorchCommNCCLX.hpp  TorchCommNCCLXBootstrap.cpp  TorchCommNCCLXBootstrap.hpp  TorchCommNCCLXCCA.cpp  TorchCommNCCLXCCA.hpp  TorchCommNCCLXPersistentRequest.cpp  TorchCommNCCLXPersistentRequest.hpp  TorchCommNCCLXPy.cpp  TorchCommNCCLXUtils.cpp  TorchCommWindowNCCLX.cpp  TorchCommWindowNCCLX.hpp  TorchWorkNCCLX.cpp  TorchWorkNCCLX.hpp  TorchWorkNCCLXQueue.cpp  _comms_ncclx.pyi
comms/torchcomms/ncclx/docs/: graph_timeout_design.md
comms/torchcomms/ncclx/examples/: AllReduceAsync.cpp  AllReduceAsync.py  AllReduceSync.cpp  AllReduceSync.py  SendRecvAsync.cpp  SendRecvAsync.py  SendRecvSync.cpp  SendRecvSync.py
comms/torchcomms/rccl/: CMakeLists.txt  HipApi.cpp  HipApi.hpp  RcclApi.cpp  RcclApi.hpp  TorchCommRCCL.cpp  TorchCommRCCL.hpp  TorchCommRCCLBootstrap.cpp  TorchCommRCCLBootstrap.hpp  TorchCommRCCLCCA.cpp  TorchCommRCCLCCA.hpp  TorchCommRCCLPy.cpp  TorchCommRCCLUtils.cpp  TorchWorkRCCL.cpp  TorchWorkRCCL.hpp
comms/torchcomms/rcclx/: CMakeLists.txt  HipApi.cpp  HipApi.hpp  RcclxApi.cpp  RcclxApi.hpp  TorchCommRCCLX.cpp  TorchCommRCCLX.hpp  TorchCommRCCLXBootstrap.cpp  TorchCommRCCLXBootstrap.hpp  TorchCommRCCLXCCA.cpp  TorchCommRCCLXCCA.hpp  TorchCommRCCLXPy.cpp  TorchCommRCCLXUtils.cpp  TorchWorkRCCLX.cpp  TorchWorkRCCLX.hpp
comms/torchcomms/transport/: CMakeLists.txt  README.md  RdmaTransport.cpp  RdmaTransport.h  RdmaTransportPy.cpp  StagedRdmaTransport.cpp  StagedRdmaTransport.h  _transport.pyi
comms/torchcomms/transport/benchmarks/: README.md  (+1 more)
comms/torchcomms/triton/: CMakeLists.txt  device_transport.cu  device_transport.h  device_window.cu  device_window.h  device_window_nvl_opt.cu  torchcomms_device.cu  torchcomms_device.h
comms/torchcomms/xccl/: CMakeLists.txt  README.md  TorchCommXCCL.cpp  TorchCommXCCL.hpp  TorchCommXCCLBootstrap.cpp  TorchCommXCCLBootstrap.hpp  TorchCommXCCLPy.cpp  TorchCommXCCLUtils.cpp  TorchWorkXCCL.cpp  TorchWorkXCCL.hpp  TorchWorkXCCLQueue.cpp  XcclApi.cpp  XcclApi.hpp  _comms_xccl.pyi
comms/uniflow/: .clang-tidy  CMakeLists.txt  Connection.cpp  Connection.h  MultiTransport.cpp  MultiTransport.h  Result.h  Segment.cpp  Segment.h  Uniflow.cpp  Uniflow.h  UniflowPy.cpp  _core.pyi
comms/uniflow/benchmarks/: BenchmarkResult.h  BenchmarkRunner.cpp  BenchmarkRunner.h  Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  DESIGN.md  Rendezvous.cpp  Rendezvous.h  Reporter.cpp  Reporter.h  SegmentHelper.h  Stats.cpp  Stats.h  main.cpp
comms/uniflow/controller/: CMakeLists.txt  Controller.h  TcpController.cpp  TcpController.h
comms/uniflow/core/: CMakeLists.txt  Func.h  MpscQueue.h
comms/uniflow/drivers/: CMakeLists.txt  Constants.h
comms/uniflow/executor/: CMakeLists.txt  EpollEventBase.h  EventBase.h  LockFreeEventBase.h  LockFreeQueuePolicy.h  MutexEventBase.h  MutexQueuePolicy.h  ScopedEventBaseThread.h
comms/uniflow/logging/: CMakeLists.txt  Logger.cpp  Logger.h
comms/uniflow/tests/: CMakeLists.txt
comms/uniflow/transport/: CMakeLists.txt  Topology.cpp  Topology.h  Transport.h  TransportType.h
comms/utils/: CMakeLists.txt  Conversion.h  CudaChecks.h  CudaRAII.cc  GpuClockCalibration.cc  GpuClockCalibration.cu  GpuClockCalibration.h  GraphCaptureSideStream.cc  GraphCaptureSideStream.h  HRDWRingBuffer.h  HRDWRingBufferDeviceHandle.cuh  HRDWRingBufferReader.h  MemUtils.cc  checks.h  commSpecs.h
comms/utils/colltrace/: AlgoStats.cc  AlgoStats.h  CollTrace.cc  CollTrace.h  CollTraceInterface.h  CollTracePlugin.h  CudaWaitEvent.cc  CudaWaitEvent.h  GraphCollTraceEvent.h  GraphCollTraceHandle.h  GraphCollTraceState.h  GraphCudaWaitEvent.cc  GraphCudaWaitEvent.h  HRDWRingBufferInstantiations.cu  HRDWRingBufferInstantiations.cuh
comms/utils/cvars/: .gitignore  README.md  extractcvars.py  nccl_baseline_adapter.cc  nccl_baseline_adapter.h  nccl_cvars.cc  nccl_cvars.h  nccl_cvars.yaml
comms/utils/logger/: DataSink.h  DataTable.cc  ProcessGlobalErrorsUtil.cc  ProcessGlobalErrorsUtil.h  ScubaFileUtils.cc  ScubaFileUtils.h  ScubaOtel.cc  ScubaOtel.h
comms/utils/memtrace/: MemoryTrace.cc  MemoryTrace.h
comms/utils/test_utils/: CMakeLists.txt  CudaGraphTestUtils.cc  CudaGraphTestUtils.h
comms/utils/tests/: ChecksUT.cc  CommSpecsUT.cc  CudaChecksUT.cc  GraphCaptureSideStreamTest.cu  HRDWRingBufferDeviceHandleTest.cu  HRDWRingBufferStressTest.cc  HRDWRingBufferTestInstantiations.cu  HRDWRingBufferTestTypes.h  HRDWRingBufferUT.cc  HRDWRingBufferUT.cu  StreamCaptureModeGuardTest.cc
(+1987 files in other folders)
