# Copyright (c) Meta Platforms, Inc. and affiliates.
# Extension: torchcomms._comms_gloo

if(DEFINED PYTORCH_GLOO_SOURCE_DIR AND EXISTS "${PYTORCH_GLOO_SOURCE_DIR}/gloo")
  set(gloo_SOURCE_DIR "${PYTORCH_GLOO_SOURCE_DIR}")
elseif(EXISTS "${ROOT}/../gloo/gloo")
  set(gloo_SOURCE_DIR "${ROOT}/../gloo")
else()
  include(FetchContent)
  FetchContent_Declare(
    gloo
    GIT_REPOSITORY https://github.com/pytorch/gloo.git
    GIT_TAG        main
  )
  # fetch but don't build
  FetchContent_Populate(gloo)
endif()

file(GLOB TORCHCOMMS_GLOO_SOURCES "comms/torchcomms/gloo/*.cpp")

add_library(torchcomms_comms_gloo MODULE ${TORCHCOMMS_GLOO_SOURCES})
set_target_properties(torchcomms_comms_gloo PROPERTIES
    PREFIX ""
    OUTPUT_NAME "_comms_gloo"
    SUFFIX ".${Python3_SOABI}.so"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/comms/torchcomms"
)
target_include_directories(torchcomms_comms_gloo PRIVATE
    ${ROOT}
    ${CONDA_INCLUDE}
    ${Python3_INCLUDE_DIRS}
    ${gloo_SOURCE_DIR}
)
target_compile_features(torchcomms_comms_gloo PRIVATE cxx_std_20)
target_link_directories(torchcomms_comms_gloo PRIVATE ${CONDA_LIB})
target_link_libraries(torchcomms_comms_gloo PRIVATE
    glog::glog_headers
    torchcomms
    fmt::fmt
    ${TORCH_LIBRARIES}
    ${TORCH_PYTHON_LIB}
)

install(TARGETS torchcomms_comms_gloo
    LIBRARY DESTINATION .
)
